[gd_scene load_steps=5 format=3 uid="uid://bxnykmi1ver2y"]

[ext_resource type="Script" path="res://scenes/ability/spear_ability/spear_ability.gd" id="1_k7f6u"]
[ext_resource type="Texture2D" uid="uid://byspwvolut5d6" path="res://scenes/ability/spear_ability/spear.png" id="2_voklo"]
[ext_resource type="PackedScene" uid="uid://drnt7k86wkpba" path="res://scenes/component/hitbox_component.tscn" id="3_73klc"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3hiag"]
size = Vector2(15, 10)

[node name="SpearAbility" type="Node2D"]
script = ExtResource("1_k7f6u")

[node name="Sprite2D" type="Sprite2D" parent="."]
rotation = 1.5708
texture = ExtResource("2_voklo")
offset = Vector2(0, -4)
flip_h = true

[node name="HitboxComponent" parent="." instance=ExtResource("3_73klc")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitboxComponent"]
position = Vector2(4.5, 0)
shape = SubResource("RectangleShape2D_3hiag")

[node name="DurationTimer" type="Timer" parent="."]
wait_time = 1.5
one_shot = true
autostart = true
